--- a/share/factory-dashboard/docker-compose.yml
+++ b/share/factory-dashboard/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - .:/app
     working_dir: /app/next
-    command: /bin/sh -c "npm install && npm run build && npm start"
+    command: /bin/sh -c "npm install && npm run dev"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${WEBSITE_NAME}.rule=PathPrefix(`/factory`)"
